--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>PORTFOLIO</title>
-    <link href="style/reset.css" rel="stylesheet">
+    <link href="css/reset.css" rel="stylesheet">
     <link href="css/portfolio.css" rel="stylesheet">
 </head>
 <body>
@@ -22,8 +22,12 @@
     </div>
 
     <div id="first-title">
-        <h2>Dariyan's Portfolio</h2>
+        <h2>Welcome to Dariyan's Portfolio!</h2>
         <p>Learn about my current projects and potential developments!</p>
+        
+    </div>
+
+    <div id="main-container">
         
     </div>
 
