more style changes

--- a/index.html
+++ b/index.html
@@ -12,11 +12,11 @@
 <body>
     <div id="navigation">
         <div class="nav-functions">
-        <a href="index.html">Main Page</a>
-        <a href="aboutme.html">About Me</a>
-        <a href="thedream_blog.html">Articles</a>
-        <a href="portfolio_page.html">Portfolio</a>
-        <a href="https://www.linkedin.com/in/dariyan-sim-3b098a236/">LinkedIn</a>
+        <a href="index.html"  style="color: white">Main Page</a>
+        <a href="aboutme.html"style="color: white">About Me</a>
+        <a href="thedream_blog.html"style="color: white">Articles</a>
+        <a href="portfolio_page.html"style="color: white">Portfolio</a>
+        <a href="https://www.linkedin.com/in/dariyan-sim-3b098a236/"style="color: white">LinkedIn</a>
         </div>
         
     </div>
@@ -28,7 +28,9 @@
     </div>
 
     <div id="main-container">
-        
+        <div class="content">1</div>
+        <div class="content">2</div>
+        <div class="content">3</div>
     </div>
 
     <div id="article-container">
