--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
     <title>PORTFOLIO</title>
     <link href="css/reset.css" rel="stylesheet">
     <link href="css/portfolio.css" rel="stylesheet">
+    <link href="css/effect.css" rel="stylesheet">
+
 </head>
 <body>
     <div id="navigation">
@@ -31,6 +33,9 @@
         <div class="content">1</div>
         <div class="content">2</div>
         <div class="content">3</div>
+        <div class="content">4</div>
+        <div class="content">5</div>
+        <div class="content">6</div>
     </div>
 
     <div id="article-container">
