changes to style and effect

--- a/index.html
+++ b/index.html
@@ -24,8 +24,11 @@
     </div>
 
     <div id="first-title">
-        <h2>Welcome to Dariyan's Portfolio!</h2>
-        <p>Learn about my current projects and potential developments!</p>
+        <h1>Welcome to Dariyan's Portfolio!</h1>
+        <p>Everything, including ourselves, is a work-in-progress. In order to grow and evolve, we're constantly
+            exploring. Feel free to -explore- through my projects and blogs, which inspired
+         me to expand my skills in Web Development. - D
+        </p>
         
     </div>
 
@@ -39,21 +42,7 @@
     </div>
 
     <div id="article-container">
-        <div class="first-article">
-            <h3>C R A P S - casino game project -</h3>
-            <p>In pre-development, hehe.</p>
-            <p>This is part one of two for CSI 140  class assignment, 
-                towards the FINAL. </p>
-            
-            <h4>DOCUMENTATION BLOGS</h4>
-            <P link="">PLACEHOLDER - Wed., June 1st</P>
-            <P link="">PLACEHOLDER - Thurs., June 2nd</P>
-            <P link="">PLACEHOLDER - Fri., June 3rd</P>
-
-        </div>
-    </div>
-
-    <div id="article-container">
+        <h2>P R E V I E W: My upcoming developments!</h2>
         <div class="first-article">
             <h3>TENSERFLOW.JS - interactive project -</h3>
             <p>This is part two of two, towards the FINAL!</p>
@@ -69,9 +58,6 @@
             <P link="">Interactive Project - date</P>
 
         </div>
-    </div>
-
-    <div id="article-container">
         <div class="first-article">
             <h3>TIC TAC TOE - basic game -</h3>
             <p>This is one of personal developments I'm attempting with C#, 
@@ -85,6 +71,8 @@
 
         </div>
     </div>
+
+
 
     <p>Wallpaper via <a href="https://giphy.com/">giphy</a></p>
 </body>
