font change and other styles

--- a/index.html
+++ b/index.html
@@ -14,10 +14,10 @@
 <body>
     <div id="navigation">
         <div class="nav-functions">
-        <a href="index.html"  style="color: white">Main Page</a>
-        <a href="aboutme.html"style="color: white">About Me</a>
-        <a href="thedream_blog.html"style="color: white">Articles</a>
-        <a href="portfolio_page.html"style="color: white">Portfolio</a>
+        <a href=""  style="color: white">Main Page</a>
+        <a href=""style="color: white">About Me</a>
+        <a href=""style="color: white">Articles</a>
+        <a href="index.html"style="color: white">Portfolio</a>
         <a href="https://www.linkedin.com/in/dariyan-sim-3b098a236/"style="color: white">LinkedIn</a>
         </div>
         
@@ -34,18 +34,19 @@
 
     <div id="main-container">
         <div class="content">1</div>
-        <div class="content">2</div>
+        <div class="content">
+            <h3>Craps project, no real functions.. yet.</h3>
+        </div>
         <div class="content">3</div>
-        <div class="content">4</div>
+        <div class="content"><h3>My journey ln developing Craps game.</h3></div>
         <div class="content">5</div>
-        <div class="content">6</div>
+        <div class="content"><h3>dsf</h3></div>
     </div>
 
     <div id="article-container">
         <h2>P R E V I E W: My upcoming developments!</h2>
         <div class="first-article">
             <h3>TENSERFLOW.JS - interactive project -</h3>
-            <p>This is part two of two, towards the FINAL!</p>
             <p>Learning about TensorFlow, which can be done in 
                 multiple programming languages like C# or JavaScript, because
                 it is similar to my designing needs for developing 
