--- a/index.html
+++ b/index.html
@@ -72,9 +72,13 @@
 
         </div>
     </div>
+    <audio controls autoplay>
+        <source src="audio/best-time-112194.mp3" type="audio">
+      Your browser does not support the audio element.
+      </audio>
 
 
-
-    <p>Wallpaper via <a href="https://giphy.com/">giphy</a></p>
+   <a href="https://pixabay.com/music/?utm_source=link-attribution&amp;utm_medium=referral&amp;utm_campaign=music&amp;utm_content=112194" style="color:white">MUSIC FROM PIXABAY</a>
+    <p style="color:white">Wallpaper via <a href="https://giphy.com/">giphy</a></p>
 </body>
 </html>
