--- a/index.html
+++ b/index.html
@@ -29,6 +29,11 @@
             exploring. Feel free to -explore- through my projects and blogs, which inspired
          me to expand my skills in Web Development. - D
         </p>
+        <br>
+        <p><audio controls autoplay>
+            <source src="audio/best-time-112194.mp3" type="audio/mp3">
+          Your browser does not support the audio element.
+          </audio></p>
         
     </div>
 
@@ -72,10 +77,7 @@
 
         </div>
     </div>
-    <audio controls autoplay>
-        <source src="audio/best-time-112194.mp3" type="audio">
-      Your browser does not support the audio element.
-      </audio>
+    
 
 
    <a href="https://pixabay.com/music/?utm_source=link-attribution&amp;utm_medium=referral&amp;utm_campaign=music&amp;utm_content=112194" style="color:white">MUSIC FROM PIXABAY</a>
