--- a/index.html
+++ b/index.html
@@ -31,7 +31,8 @@
         </p>
         <br>
         <p><audio controls autoplay>
-            <source src="audio/best-time-112194.mp3" type="audio/mp3">
+            <source src="audio/best-time-112194.mp3" audio="audio/mpeg">
+            <source src="audio/best-time-112194.mp3" audio="audio/mpeg">
           Your browser does not support the audio element.
           </audio></p>
         
