--- a/index.html
+++ b/index.html
@@ -41,12 +41,12 @@
     <div id="main-container">
         <div class="content">1</div>
         <div class="content">
-            <h3>Craps project, no real functions.. yet.</h3>
+            <h2>Visuals on craps project. No working functions, yet..</h2>
         </div>
         <div class="content">3</div>
-        <div class="content"><h3>My journey ln developing Craps game.</h3></div>
+        <div class="content"><h2>Read through my journey while developing Craps game.</h2></div>
         <div class="content">5</div>
-        <div class="content"><h3>dsf</h3></div>
+        <div class="content"><h2></h2></div>
     </div>
 
     <div id="article-container">
