--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
 <body>
     <div id="navigation">
         <div class="nav-functions">
-        <a href=""  style="color: white">Main Page</a>
-        <a href=""style="color: white">About Me</a>
-        <a href=""style="color: white">Articles</a>
+        <a href="https://ms-dariyansim-xo.github.io/DARIYANSDREAM-blog/" style="color: white">Main Page</a>
+        <a href="https://ms-dariyansim-xo.github.io/DARIYANSDREAM-blog/aboutme.html" style="color: white">About Me</a>
+        <a href="https://ms-dariyansim-xo.github.io/DARIYANSDREAM-blog/thedream_blog.html"style="color: white">Articles</a>
         <a href="index.html"style="color: white">Portfolio</a>
         <a href="https://www.linkedin.com/in/dariyan-sim-3b098a236/"style="color: white">LinkedIn</a>
         </div>
@@ -82,7 +82,18 @@
     </div>
 
     <div id="bottom-container">
-
+        <form action="/action_page.php">
+            <fieldset>
+            <legend>[practice] Form Entry:</legend><br>
+            <label for="date">Today is:</label><br>
+            <input type="date" id="date"><br><br>
+            <label for="fname">First name:</label><br>
+            <input type="text" id="fname"><br><br>
+            <label for="lname">Last name:</label><br>
+            <input type="text" id="fname"><br><br>
+            <input type="submit" value="Submit">
+            </fieldset>
+          </form>
     </div>
     
    <p style="color: white">Music from <a href="https://pixabay.com/music/?utm_source=link-attribution&amp;utm_medium=referral&amp;utm_campaign=music&amp;utm_content=112194">
