--- a/index.html
+++ b/index.html
@@ -82,18 +82,23 @@
     </div>
 
     <div id="bottom-container">
-        <form action="/action_page.php">
+        <form">
             <fieldset>
             <legend>[practice] Form Entry:</legend><br>
             <label for="date">Today is:</label><br>
             <input type="date" id="date"><br><br>
+
             <label for="fname">First name:</label><br>
             <input type="text" id="fname"><br><br>
+
             <label for="lname">Last name:</label><br>
             <input type="text" id="fname"><br><br>
-            <input type="submit" value="Submit">
+
+            <input type="submit">
             </fieldset>
           </form>
+
+          <script src="script/js.js">alert()</script>
     </div>
     
    <p style="color: white">Music from <a href="https://pixabay.com/music/?utm_source=link-attribution&amp;utm_medium=referral&amp;utm_campaign=music&amp;utm_content=112194">
