--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
             
         </div>
         <div class="content">Varied blog styles</div>
-        <div class="content">Click <a href="pageforblogdemo.html">here</a> or scroll down to view my sample blogs. </div>
+        <div class="content"><h2>Click <a href="pageforblogdemo.html">here</a> or scroll down to view my sample blogs. </h2></div>
         
         </div>
 
